added open graph feature

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="My To-Do List App">
+    <meta property="og:description" content="A simple and efficient to-do list to manage your tasks easily.">
+    <meta property="og:image" content="https://todolist-ad9.pages.dev/images/og-image.png">
+    <meta property="og:url" content="https://todolist-ad9.pages.dev/">
+    <meta property="og:type" content="website">
      <link rel="stylesheet" href="./src/output.css"> 
      <script src="./script.js" defer></script>
      <style>
